DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Mar-21-2007 patrick     Instances of vrj::DrawSimInterfaces are now handled
                        internally using boost::shared_ptr<T>.
Mar-21-2007 patrick     The Display Manager now uses vrj::DisplayPtr (a
                        boost::shared_ptr typedef) instead of vrj::Display*.
                        NEW VERSION: 2.1.20
Mar-18-2007 patrick     The OpenGL Draw Manager now uses vrj::GlWindowPtr (a
                        boost::shared_ptr typedef) instead of vrj::GlWindow*.
                        NEW VERSION: 2.1.19
Feb-22-2007 patrick     Added vrj::GlSimInterface::contextInit() so that the
                        contextInit() method in vrj::GlDrawObjectFunctor can
                        be invoked.
                        NEW VERSION: 2.1.18
Feb-21-2007 patrick     Updated for new keys in Gadgeteer 1.1.24.
Jan-30-2007 patrick     Eliminated the need to set VJ_BASE_DIR on Windwos to
                        run applications.
                        NEW VERSION: 2.1.17
Dec-18-2006 aronb       Added initial support for Direct3D.
                        NEW VERSION: 2.1.16
Nov-14-2006 patrick     Replaced vpr::ReturnStatus usage with bool in the
                        vrj::PerfPlugin interface.
                        NEW VERSION: 2.1.15
Oct-30-2006 patrick     Register signal handlers for SIGINT, SIGTERM, and (on
                        Windows only) SIGBREAK when the kernel is started.
                        NEW VERSION: 2.1.14
Oct-01-2006 patrick     Updated for VPR 1.1.35.
                        NEW VERSION: 2.1.13
Oct-01-2006 patrick     Updated to handle the vpr::Thread constructor throwing
                        an exception.
                        NEW VERSION: 2.1.12
Sep-07-2006 patrick     Improved error handling in viewport configurations.
Jul-12-2006 patrick     Changed the DLL name to include the version as part of